Fixed decorative effects

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,8 +3,7 @@
 	justify-content: space-between; 
 	max-width: 1170px;
 	margin: 0 auto;
-	padding-top: 80px;
-	padding-bottom: 30px;
+	padding: 80px 20px 30px;
 }
 .bottom-links__navigation {
 	color: #8993ad;
