--- a/css/main.css
+++ b/css/main.css
@@ -780,22 +780,15 @@
 .form__wrapper {
 	position: fixed;
 	z-index: 15;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.form__content {
-	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	display: flex;
 	flex-flow: column;
-	z-index: 30;
 	width: 500px;
 	max-width: 100%;
+	max-height: 100%;
+	overflow: auto;
 	padding: 50px;
 	border-radius: 10px;
 	background-color: #ffffff;
@@ -861,7 +854,7 @@
 }
 
 .form__close-button {
-	position: absolute;
+	position: fixed;
 	right: 20px;
 	top: 20px;
 	padding: 0;
